# infinoted-plugin-example

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  configure.ac
src/: Makefile.am  inf-signals.h  infinoted-plugin-example.c  infinoted-plugin-replacer.c  infinoted-plugin-replacer.h
